# klavier-core

./: .gitignore  404.html  Cargo.toml  README.md  index.html  mkdocs.yml  my.css  sitemap.xml
.github/workflows/: build-main.yaml  release-beta.yaml  release.yaml  rust.yml
docs/: index.md
docs/repeat/: examples.md  order.md  structure.md
repeat/examples/: index.html
repeat/order/: index.html
repeat/structure/: index.html
search/: search_index.json
src/: bar.rs  can_apply.rs  channel.rs  clipper.rs  ctrl_chg.rs  duration.rs  exported_project.rs  expr.rs  fly_weight.rs  global_repeat.rs  grid.rs  have_start_tick.rs  key.rs  lib.rs  location.rs  midi_events.rs  models.rs  note.rs  octave.rs  percent.rs  pitch.rs  play_iter.rs  play_start_tick.rs  project.rs  repeat.rs  rhythm.rs  sharp_flat.rs  solfa.rs  tempo.rs  text_input.rs  trimmer.rs  tuple.rs  undo.rs  velocity.rs
