[package]
name = "klavier-core"
version = "0.1.1-beta.1"
edition = "2021"
description = "Core library of klavier."
license = "Apache-2.0"
documentation = "https://github.com/ruimo/klavier-core"
homepage = "https://github.com/ruimo/klavier-core"
repository = "https://github.com/ruimo/klavier-core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
klavier-helper = "0.1.3-beta.2"
#klavier-helper = { path = "../klavier-helper" }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
regex = "1"
once_cell = "1"
gcd = "2.1.0"
serdo = { version = "0.1.4-beta.9", features = ["persistence"] }
bincode = "1"
error-stack = "0.4.1"
enumset = { version = "1.1.3", features = ["serde"] }
intervallum = "1"
gcollections = "1"

[dev-dependencies]
tempfile = "3.3.0"
