[package]
name = "klavier-core"
version = "0.1.8"
edition = "2021"
description = "Core library of klavier."
license = "Apache-2.0"
documentation = "https://github.com/ruimo/klavier-core"
homepage = "https://github.com/ruimo/klavier-core"
repository = "https://github.com/ruimo/klavier-core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
klavier-helper = "0.1.8"
#klavier-helper = { path = "../klavier-helper" }
serde = { version = "^1", features = ["derive", "rc"] }
serde_json = "^1"
regex = "^1"
once_cell = "^1"
gcd = "^2"
serdo = { version = "0.1.6", features = ["persistence"] }
#serdo = { path = "../serdo",  features = ["persistence"] }
bincode = "^1"
error-stack = "^0"
enumset = { version = "^1", features = ["serde"] }
intervallum = "^1"
gcollections = "^1"
derive_builder = "0.20.2"
fasteval = "^0"

[dev-dependencies]
tempfile = "^3"
